--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="./src/assets/logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./src/assets/logo.png" type="image/x-icon">
     <title>MulpJ | Seus filmes favoritos aqui!</title>
   </head>
   <body>
